timer for thank you modal, newsletter with checkbox

--- a/src/index.html
+++ b/src/index.html
@@ -1553,14 +1553,23 @@
 							<option value="zambian">Zambian</option>
 							<option value="zimbabwean">Zimbabwean</option>
 						</select>
-						<input type="hidden" name="investor_type" id="sg_custom_0" class="sg_custom">
+						<input type="hidden" name="investor_type" id="sg_custom_0" class="sg_custom" value="public">
 						<input type="hidden" name="nationality"  id="sg_custom_1" class="sg_custom">
+						<input type="hidden" name="newsletter" id="sg_custom_2" class="sg_custom" >
 						<input type="submit" id="sg-submit-btn" value="Subscribe">
-						<div class="sg-consent-text"><label><input type="checkbox" id="sg_consent_checkbox"
-																   name="sg_consent_checkbox"> I have read and accepted
-							the </label> <a target="_blank"
-											href="https://www.bitwalatoken.com/terms-and-conditions.html">Terms &
-							Conditions</a></div>
+						<div class="sg-consent-text">
+							<label>
+								<input type="checkbox" id="sg_consent_checkbox" name="sg_consent_checkbox"> I have read and accepted the
+							</label>
+							<a target="_blank" href="https://www.bitwalatoken.com/terms-and-conditions.html">Terms & Conditions</a>
+						</div>
+						<div class="sg-consent-text" style="margin: 0 60px 20px 60px;">
+							<label for="addToNews">
+								<input type="checkbox" id="addToNews">
+								I would like to receive important STO updates.
+								We will never spam you and you can unsubscribe any time.
+							</label>
+						</div>
 					</form>
 				</div>
 
