section home animation

--- a/src/index.html
+++ b/src/index.html
@@ -156,6 +156,7 @@
 </header>
 <div class="main-content">
 	<section class="section section-home">
+		<div class="animation-box" id="homeAnimation"></div>
 		<div class="container">
 			<h1 class="main-title">The only bank</h1>
 			<h2 class="main-sub-title">Merging banking, crypto & tokenised assets</h2>
