--- a/src/index.html
+++ b/src/index.html
@@ -1557,18 +1557,20 @@
 						<input type="hidden" name="nationality"  id="sg_custom_1" class="sg_custom">
 						<input type="hidden" name="newsletter" id="sg_custom_2" class="sg_custom" >
 						<input type="submit" id="sg-submit-btn" value="Subscribe">
-						<div class="sg-consent-text">
-							<label>
-								<input type="checkbox" id="sg_consent_checkbox" name="sg_consent_checkbox"> I have read and accepted the
-							</label>
-							<a target="_blank" href="https://www.bitwalatoken.com/terms-and-conditions.html">Terms & Conditions</a>
-						</div>
-						<div class="sg-consent-text" style="margin: 0 60px 20px 60px;">
-							<label for="addToNews">
-								<input type="checkbox" id="addToNews">
-								I would like to receive important STO updates.
-								We will never spam you and you can unsubscribe any time.
-							</label>
+						<div class="sg-consent-text-wrap">
+							<div class="sg-consent-text">
+								<label>
+									<input type="checkbox" id="sg_consent_checkbox" name="sg_consent_checkbox"> I have read and accepted the
+								</label>
+								<a target="_blank" href="https://www.bitwalatoken.com/terms-and-conditions.html">Terms & Conditions</a>
+							</div>
+							<div class="sg-consent-text">
+								<label for="addToNews">
+									<input type="checkbox" id="addToNews">
+									I would like to receive important STO updates.
+									We will never spam you and you can unsubscribe any time.
+								</label>
+							</div>
 						</div>
 					</form>
 				</div>
